(1)fixed responsive error on mobile devices. (2)make some changes and complete totally

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,20 @@ body{
     color: white;
 }
 
+body::-webkit-scrollbar {
+    width: 10px;
+}
+
+body::-webkit-scrollbar-track {
+    width: 10px;
+    background-color: rgb(129,125,135);
+}
+
+body::-webkit-scrollbar-thumb {
+    width: 10px;
+    background-color: rgb(39, 60, 117);
+}
+
 .img1{
     background-image: url("https://images01.nicepagecdn.com/c461c07a441a5d220e8feb1a/8c593f782d1654b09c0aa7b3/jhjh688.jpg");
 }
@@ -29,4 +43,12 @@ body{
 
 .contact-img{
     background-image: url("./images/myimg-bg.jpg");
+}
+
+@media only screen and (max-width: 425px){
+    .image{
+        width: 250px;
+        height: 300px;
+        padding: 2px;
+    }
 }
